# brane

./: .taplo.toml  Cargo.toml  Dockerfile.let  Dockerfile.rls  Makefile  README.md  deny.toml  docker-compose-central.yml  docker-compose-proxy.yml  docker-compose-worker.yml  renovate.json5
.github/workflows/: audit.yml  build.yml  cd-nightly.yml  cd.yml  ci-common.yml  ci.yml  mixin-cargo-check.yml  mixin-cargo-clippy.yml  mixin-cargo-fmt.yml  mixin-cargo-test.yml  nightly_release.yml  update_nightly.yml
brane-api/: Cargo.toml
brane-api/src/: cli.rs  data.rs  errors.rs  health.rs  infra.rs  main.rs  packages.rs  schema.rs  spec.rs  version.rs
brane-ast/: Cargo.toml
brane-ast-2/: Cargo.toml
brane-ast-2/src/: ast.rs  lib.rs
brane-ast/src/: ast.rs  ast_new.rs  ast_unresolved.rs  compile.rs  data_type.rs  dsl.rs  edgebuffer.rs  errors.rs  fetcher.rs  func_id.rs  lib.rs  locations.rs  spec.rs  state.rs  warnings.rs
brane-ast/src/traversals/: attributes.rs  compile.rs  data.rs  flatten.rs  location.rs  metadata.rs  null.rs  offset.rs  prune.rs  resolve.rs  typing.rs  workflow_optimize.rs  workflow_resolve.rs
brane-ast/src/traversals/print/: ast.rs  ast_unresolved.rs  dsl.rs  symbol_tables.rs
brane-cc/: Cargo.toml
brane-cc/src/: cli.rs  compile.rs  errors.rs  main.rs  spec.rs
brane-cfg/: Cargo.toml
brane-cfg/src/: backend.rs  certs.rs  errors.rs  info.rs  infra.rs  node.rs  policies.rs  proxy.rs
brane-chk/: Cargo.toml
brane-chk/policy/: main.eflint  queries.eflint
brane-chk/src/: lib.rs  main.rs  question.rs  reasonerconn.rs  stateresolver.rs
brane-chk/src/apis/: deliberation.rs  reasoner.rs
brane-chk/src/workflow/: compile.rs  compiler.rs  eflint.rs  mod.rs  preprocess.rs  tests.rs  utils.rs
brane-cli/: Cargo.toml
brane-cli-c/: Cargo.toml  build.rs  cbindgen.toml
brane-cli-c/src/: lib.rs
brane-cli/src/: build_common.rs  build_ecu.rs  build_oas.rs  certs.rs  check.rs  cli.rs  data.rs  errors.rs  instance.rs  lib.rs  main.rs  packages.rs  planner.rs  registry.rs  repl.rs  run.rs  spec.rs  test.rs  upgrade.rs  utils.rs  verify.rs  version.rs  vm.rs
brane-cli/src/old_configs/v1_0_0/: data.rs
brane-ctl/: Cargo.toml  build.rs
brane-ctl/src/: cli.rs  download.rs  errors.rs  generate.rs  lifetime.rs  main.rs  packages.rs  policies.rs  spec.rs  unpack.rs  upgrade.rs  utils.rs  wizard.rs
brane-ctl/src/old_configs/v1_0_0/: node.rs
brane-ctl/src/wizard/: validator.rs
brane-drv/: Cargo.toml
brane-drv/src/: check.rs  cli.rs  errors.rs  gc.rs  handler.rs  main.rs  planner.rs  spec.rs  vm.rs
brane-dsl/: Cargo.toml
brane-dsl-2/: Cargo.toml
brane-dsl-2/src/: errors.rs  lib.rs  notes.rs  warnings.rs
brane-dsl-2/src/ast/: auxillary.rs  expressions.rs  identifiers.rs  mod.rs  spec.rs  statements.rs  symbol_tables.rs  toplevel.rs  types.rs
brane-dsl-2/src/compiler/: annot_stack.rs  mod.rs  utils.rs
brane-dsl-2/src/compiler/traversals/: annotations.rs  mod.rs  print_ast.rs  resolve.rs  typing.rs
brane-dsl-2/src/parser/: mod.rs  parser.rs  utils.rs
brane-dsl-2/src/parser/bscript/: auxillary.rs  blocks.rs  expressions.rs  instances.rs  literals.rs  mod.rs  operators.rs  statements.rs  toplevel.rs
brane-dsl-2/src/scanner/: auxillary.rs  comments.rs  identifiers.rs  keywords.rs  literals.rs  mod.rs  operators.rs  punctuation.rs  scanner.rs  tokens.rs
brane-dsl/src/: compiler.rs  data_type.rs  errors.rs  lib.rs  location.rs  spec.rs  symbol_table.rs
brane-dsl/src/parser/: ast.rs  bscript.rs  expression.rs  identifier.rs  instance.rs  literal.rs  mod.rs  operator.rs
brane-dsl/src/scanner/: comments.rs  literal.rs  mod.rs  scanning.rs  tokens.rs
brane-exe/: Cargo.toml
brane-exe/src/: dummy.rs  errors.rs  frame_stack.rs  lib.rs  pc.rs  spec.rs  stack.rs  thread.rs  value.rs  vm.rs  vtable.rs
brane-job/: Cargo.toml
brane-job/src/: cli.rs  errors.rs  main.rs  worker.rs
brane-let/: Cargo.toml
brane-let/src/: callback.rs  cli.rs  common.rs  errors.rs  exec_ecu.rs  exec_nop.rs  exec_oas.rs  main.rs
brane-log/: Cargo.toml
brane-log/src/: main.rs
brane-oas/: Cargo.toml
brane-plr/: Cargo.toml
brane-plr/src/: cli.rs  context.rs  main.rs  planner.rs
brane-prx/: Cargo.toml
brane-prx/src/: cli.rs  client.rs  errors.rs  main.rs  manage.rs  ports.rs  redirect.rs  spec.rs
brane-reg/: Cargo.toml
brane-reg/src/: check.rs  cli.rs  data.rs  errors.rs  health.rs  infra.rs  main.rs  server.rs  spec.rs  store.rs  version.rs
brane-shr/: Cargo.toml
brane-shr/src/: address.rs  errors.rs  formatters.rs  fs.rs  input.rs  jobs.rs  kafka.rs  utilities.rs
brane-tsk/: Cargo.toml
brane-tsk/src/: api.rs  caches.rs  docker.rs  errors.rs  input.rs  k8s.rs  local.rs  spec.rs  tools.rs
ci-cd/: msrv  rename-artifacts.py
make/: Cargo.toml
make/src/: args.rs  command.rs  commands.rs  dependencies.rs  develop.rs  lib.rs  main.rs  release.rs  utils.rs
specifications/: Cargo.toml
specifications/src/: address.rs  arch.rs  brane.rs  checking.rs  cli.rs  common.rs  container.rs  data.rs  driving.rs  errors.rs  index.rs  lib.rs  os.rs  package.rs  pc.rs  planning.rs  policy.rs  profiling.rs  registering.rs  tracing.rs  version.rs  working.rs
specifications/src/wir/: builtins.rs  data_type.rs  func_id.rs  merge_strategy.rs  mod.rs
src/: main.rs
tests/branescript/: annotations.bs  arrays.bs  cutoff.bs  epi.bs  for.bs  import.bs  on.bs  parallel.bs  referencing.bs  rusty_block.bs  rusty_semicolon.bs
tests/eflint/: tautology.eflint
xtask/: Cargo.toml
xtask/src/: cli.rs  install.rs  main.rs  man.rs  package.rs
