[package]
name = "brane-api"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"
rust-version = "1.74.1"

[dependencies]
async-compression = { version = "0.4.12", features = ["tokio","gzip"] }
bytes = "1.2.0"
chrono = "0.4.39"
clap = { version = "4.5.13", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
env_logger = "0.11.6"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
futures = "0.3.31"
juniper = "0.16.1"
juniper_warp = "0.8.0"
# k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4.22"
prost = "0.13.4"
rand = "0.8.5"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.12.5", features = ["rustls-tls-manual-roots"] }
scylla = "0.15.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.14.0"
time = "0.3.37"
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.17"
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
warp = "0.3.0"

brane-cfg      = { path = "../brane-cfg" }
brane-prx      = { path = "../brane-prx" }
brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
