[package]
name = "brane-api"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
bytes = "1.2.1"
juniper = { version = "0.16.0", features = ["chrono"] }
juniper_warp = "0.8.0"
scylla = "0.12.0"
tempfile = "3.10.1"
tokio-stream = "0.1.16"
tokio-tar = "0.3.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Workspace dependencies
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
dotenvy.workspace = true
enum-debug.workspace = true
env_logger.workspace = true
error-trace.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
warp.workspace = true

# Brane
brane-cfg.workspace = true
brane-prx.workspace = true
brane-shr.workspace = true
specifications.workspace = true

[lints]
workspace = true
