[package]
name = "brane-ast"
rust-version = "1.81.0"
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
console = "0.15.5"
enum-debug.workspace = true
lazy_static = "1.4.0"
rand = "0.9.0"
num-traits = "0.2.18"
serde = { version = "1.0.204", features = ["rc"] }
serde_json_any_key = "2.0.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Workspace dependencies
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

# Intra workspace dependencies
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[lints]
workspace = true
