[package]
name = "brane-ast"
rust-version = "1.82.0"
edition = "2021"
authors = ["Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
console = "0.15.5"
lazy_static = "1.5.0"
num-traits = "0.2.18"
serde_json_any_key = "2.0.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Workspace dependencies
enum-debug.workspace = true
log.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["rc"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Brane
brane-dsl.workspace = true
brane-shr.workspace = true
specifications.workspace = true

[lints]
workspace = true
