[package]
name = "brane-cc"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.74.1"

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive","env"] }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
human-panic = "1.0.0"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["rt","macros"] }
url = "2.5.4"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1.0.134"
specifications = { path = "../specifications" }


[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9.104"
features = ["vendored"]
