[package]
name = "brane-cc"
rust-version = "1.82"
edition = "2021"
authors = ["Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenvy = "0.15.0"
enum-debug.workspace = true
human-panic = "2.0.0"
humanlog.workspace = true
log = "0.4.22"
thiserror = "2.0.0"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
url = "2.5.0"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1.0.50"
specifications = { path = "../specifications" }


[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"

[lints]
workspace = true
