[package]
name = "brane-cc"
rust-version = "1.82"
edition = "2021"
authors = ["Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
human-panic = "2.0.0"
url = "2.5.0"

# Workspace dependencies
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
humanlog.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["default", "rt", "macros"] }

# Brane
brane-ast.workspace = true
brane-dsl.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true


[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"

[lints]
workspace = true
