[package]
name = "brane-cfg"
version = { workspace = true }
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"
rust-version = "1.67.1"

[dependencies]
async-trait = "0.1.83"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
log = "0.4.22"
rustls = "0.23.11"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tokio = { version = "1.41.1", features = [] }
x509-parser = "0.16.0"

specifications = { path = "../specifications" }
