[package]
name = "brane-chk"
edition = "2021"
rust-version = "1.82"
version.workspace = true
repository.workspace = true
authors = ["Tim Müller", "Bas Kloosterman", "Daniel Voogsgerd"]
license.workspace = true
default-run = "brane-chk"


[[bin]]
name = "brane-chk"
path = "src/main.rs"

[[bin]]
name = "wirc"
path = "src/workflow/compiler.rs"


[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
hyper-util = "0.1.5"
shlex = "1.3.0"
tower-service = "0.3.3"

# Workspace dependencies
axum.workspace = true
clap.workspace = true
enum-debug.workspace = true
error-trace = { workspace = true, features = ["serde"] }
futures.workspace = true
hyper.workspace = true
miette.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Brane
brane-ast.workspace = true
brane-cfg.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

policy-reasoner = { workspace = true, default-features = false, features = [
    "eflint-haskell-reasoner",
    "file-logger",
    "serde",
    "workflow",
] }
policy-store = { workspace = true, default-features = false, features = [
    "axum-server",
    "jwk-auth",
    "jwk-auth-kid",
    "sqlite-database",
    "sqlite-database-embedded-migrations",
] }


[dev-dependencies]
humanlog.workspace = true
names = { workspace = true, features = ["rand", "three"] }

brane-shr.workspace = true


[features]
default = []
