[package]
name = "brane-cli-c"
description = "Wrapper around `brane-cli` that provides C-bindings for interacting with a remote backend. This allows C-programs to act as a BRANE client."
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lib]
name       = "brane_cli"
crate-type = ["cdylib"]
doc        = false


[dependencies]
console = "0.15.5"
libc = "0.2.154"
parking_lot = "0.12.1"
tokio = "1.38.0"

# Workspace dependencies
tracing.workspace = true

brane-ast = { path = "../brane-ast" }
brane-cli = { path = "../brane-cli" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[lints]
workspace = true
