[package]
name = "brane-cli-c"
description = "Wrapper around `brane-cli` that provides C-bindings for interacting with a remote backend. This allows C-programs to act as a BRANE client."
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lib]
name = "brane_cli"
crate-type = ["cdylib"]
doc = false


[dependencies]
console = "0.15.5"
libc = "0.2.168"
parking_lot = "0.12.1"

# Workspace dependencies
humanlog.workspace = true
log.workspace = true
tokio.workspace = true

# Brane
brane-ast.workspace = true
brane-cli.workspace = true
brane-exe.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

[lints]
workspace = true
