[package]
name = "brane-cli"
rust-version = "1.82"
edition = "2021"
default-run = "brane"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "brane"
path = "src/main.rs"

[dependencies]
base64 = "0.22.0"
bollard = "0.18.0"
console = "0.15.5"
dialoguer = "0.11.0"
dirs = "6.0.0"
flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
fs_extra = "1.2.0"
futures-util = "0.3.30"
graphql_client = "0.14.0"
human-panic = "2.0.0"
indicatif = "0.17.0"
parking_lot = "0.12.1"
path-clean = "1.0.0"
prettytable = "0.10.0"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
tar = "0.4.21"
tempfile = "3.10.1"
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.1", features = ["codec"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
x509-parser = "0.17.0"

# Workspace dependencies
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
error-trace.workspace = true
humanlog.workspace = true
hyper.workspace = true
lazy_static.workspace = true
log.workspace = true
names.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true

# Brane
brane-ast.workspace = true
brane-cfg.workspace = true
brane-dsl.workspace = true
brane-exe.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

[features]
print_exec_path = ["brane-exe/print_exec_path"]

[lints]
workspace = true
