[package]
name = "brane-ctl"
edition = "2021"
authors = [ "Tim Müller" ]
default-run = "branectl"
rust-version = "1.82"
version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "branectl"
path = "src/main.rs"

[[bin]]
name = "branectl-completions"
path = "src/completions.rs"
doc = false

[dependencies]
base64ct = "1.6.0"
bollard = "0.18.0"
console = "0.15.5"
dialoguer = "0.11.0"
diesel = { version = "2.2.3", features = ["sqlite"] }
diesel_migrations = "2.2.0"
dirs = "6.0.0"
dotenvy = "0.15.0"
eflint-to-json = { git = "https://github.com/braneframework/policy-reasoner" }
humantime = "2.1.0"
human-panic = "2.0.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
policy = { git = "https://github.com/braneframework/policy-reasoner" }
srv = { git = "https://github.com/braneframework/policy-reasoner" }
rand = "0.9.0"
reqwest = { version = "0.12.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
shlex = "1.1.0"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = [] }

# Workspace dependencies
clap.workspace = true
enum-debug.workspace = true
error-trace.workspace = true
names.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
clap_complete = "4.4.0"

[build-dependencies]
download.workspace = true
hex-literal = "0.4.0"
clap.workspace = true

[lints]
workspace = true
