[package]
name = "brane-ctl"
edition = "2021"
authors = ["Tim Müller"]
default-run = "branectl"
rust-version = "1.82"
version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "branectl"
path = "src/main.rs"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
base64ct = { version = "1.6.0" }
bollard = "0.18.0"
console = "0.15.5"
dialoguer = "0.11.0"
diesel_migrations = "2.2.0"
dirs = "6.0.0"
human-panic = "2.0.0"
humantime = "2.1.0"
jsonwebtoken = "9.1.0"
shlex = "1.3.0"
tempfile = "3.10.1"

# Workspace dependencies
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
error-trace.workspace = true
humanlog.workspace = true
lazy_static.workspace = true
log.workspace = true
names.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true

# Brane
brane-cfg.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

policy-store = { workspace = true, features = ["sqlite-database", "sqlite-database-embedded-migrations"] }

[build-dependencies]
download.workspace = true
hex-literal = "0.4.0"
clap = { version = "4.5.0", features = ["derive", "env"] }

[lints]
workspace = true
