[package]
name = "brane-drv"
edition = "2021"
rust-version = "1.81"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.67"
clap.workspace = true
dashmap = "6.0.0"
dotenvy = "0.15.0"
env_logger = "0.11.0"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.12.0" }
serde_json = "1.0.120"
serde_json_any_key = "2.0.0"
thiserror = "2.0.0"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tonic = "0.12.0"

# Workspace dependencies
enum-debug.workspace = true
error-trace.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[lints]
workspace = true
