[package]
name = "brane-drv"
edition = "2021"
rust-version = "1.82"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dashmap = "6.0.0"
serde_json_any_key = "2.0.0"
tokio-stream = "0.1.16"

# Workspace dependencies
async-trait.workspace = true
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
env_logger.workspace = true
error-trace.workspace = true
log.workspace = true
prost.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tonic.workspace = true

# Brane
brane-cfg.workspace = true
brane-exe.workspace = true
brane-prx.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

policy-reasoner = { workspace = true }

[lints]
workspace = true
