[package]
name = "brane-dsl-2"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
description = "The `brane-dsl` crate provides a compiler for BraneScript and/or Bakery to Brane's internal workflow representation defined in `brane-ast`."

[dependencies]
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
nom        = "7.1.3"
nom_locate = "4.1.0"
num-traits = "0.2.15"

brane-ast-2 = { path = "../brane-ast-2" }

[dev-dependencies]
brane-shr = { path = "../brane-shr" }
