[package]
name = "brane-dsl-2"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
description = "The `brane-dsl` crate provides a compiler for BraneScript and/or Bakery to Brane's internal workflow representation defined in `brane-ast`."

[dependencies]
console              = "0.15.5"
enum-debug           = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
fastrand             = "*"
log                  = "0.4.17"
nom                  = "7.1.3"
nom_locate           = "4.1.0"
num-traits           = "0.2.15"
unicode-segmentation = "1.10.1"

brane-ast-2 = { path = "../brane-ast-2" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
