[package]
name = "brane-dsl"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nom = "7.1.0"
nom_locate = "4.1.0"
rand = "0.9.0"
regex = "1.5.1"
serde = "1.0.204"

# Workspace dependencies
enum-debug.workspace = true
thiserror.workspace = true
tracing.workspace = true

brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[lints]
workspace = true
