[package]
name = "brane-dsl"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nom = "7.1.0"
nom_locate = "4.1.0"
regex = "1.5.0"

# Workspace dependencies
enum-debug.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

# Brane
brane-shr.workspace = true
specifications.workspace = true

[lints]
workspace = true
