[package]
name = "brane-exe"
rust-version = "1.81"
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.67"
base64 = "0.22.0"
console = "0.15.5"
futures = "0.3.24"
lazy_static = "1.4.0"
num-traits = "0.2.18"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = [] }

# Workspace dependencies
enum-debug.workspace = true
thiserror.workspace = true
tracing.workspace = true

brane-ast = { path = "../brane-ast" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[dev-dependencies]
brane-shr = { path = "../brane-shr" }

[features]
print_exec_path = []

[lints]
workspace = true
