[package]
name = "brane-exe"
rust-version = "1.82"
edition = "2021"
authors = ["Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0.0"
console = "0.15.5"

# Workspace dependencies
async-trait.workspace = true
base64.workspace = true
enum-debug.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["default"] }

# Brane
brane-ast.workspace = true
brane-shr.workspace = true
specifications.workspace = true

[dev-dependencies]
humanlog.workspace = true
brane-shr.workspace = true

[features]
print_exec_path = []
test_logging = []

[lints]
workspace = true
