[package]
name = "brane-job"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors = { workspace = true }
license.workspace = true

[dependencies]
bollard = "0.18.0"
futures-util = "0.3.30"
serde_json_any_key = "2.0.0"
tokio-stream = "0.1.16"

# Workspace dependencies
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
env_logger.workspace = true
error-trace.workspace = true
hyper.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "macros", "signal"] }
tonic.workspace = true

# Brane
brane-cfg.workspace = true
brane-chk.workspace = true
brane-exe.workspace = true
brane-prx.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

policy-reasoner = { workspace = true }

[lints]
workspace = true
