[package]
name = "brane-let"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "branelet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
base64 = "0.22.0"
dotenvy = "0.15.0"
env_logger = "0.11.0"
libc = "0.2.154"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tokio = { version = "1.38.0", features = ["full", "time"] }
tonic = "0.12.0"
yaml-rust = { version = "0.8", package = "yaml-rust2" }

# Workspace dependencies
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true

brane-ast = { path = "../brane-ast" }
brane-exe = { path = "../brane-exe" }
specifications = { path = "../specifications" }

[lints]
workspace = true
