[package]
name = "brane-let"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "branelet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
base64 = "0.22.0"
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenvy = "0.15.0"
env_logger = "0.11.0"
libc = "0.2.168"
log = "0.4.22"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.50"
serde_yaml = { version = "0.10.0", package = "serde_yaml_ng" }
thiserror = "2.0.0"
tokio = { version = "1.44.2", features = ["full", "time"] }
tonic = "0.13.0"
yaml-rust = { version = "0.8", package = "yaml-rust2" }
brane-exe = { path = "../brane-exe" }
specifications = { path = "../specifications" }

[lints]
workspace = true
