[package]
name = "brane-let"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "branelet"
path = "src/main.rs"

[dependencies]
libc = "0.2.168"
yaml-rust = { version = "0.8", package = "yaml-rust2" }

# Workspace dependencies
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic.workspace = true

# Brane
brane-exe.workspace = true
specifications.workspace = true

[lints]
workspace = true
