[package]
name = "brane-oas"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"
rust-version = "1.67.1"

[dependencies]
anyhow = "1.0.95"
backoff = { version = "0.4.0", features = ["tokio"] }
brane-exe = { path = "../brane-exe" }
cookie = "0.18.1"
cookie_store = "0.21.1"
log = "0.4.22"
maplit = "1.0"
openapiv3 = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.8.0"
serde = "1.0.217"
serde_json = "1.0.134"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
specifications = { path = "../specifications" }
