[package]
name = "brane-plr"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0.0"
dotenvy = "0.15.0"
parking_lot = "0.12.1"
rand = "0.9.0"
reqwest = "0.12.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tonic = "0.12.0"
warp = "0.3.2"

# Workspace dependencies
clap.workspace = true
error-trace.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-prx = { path = "../brane-prx" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[lints]
workspace = true
