[package]
name = "brane-plr"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0.0"

# Workspace dependencies
clap.workspace = true
dotenvy.workspace = true
error-trace.workspace = true
humanlog.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tonic.workspace = true
warp.workspace = true

# Brane
brane-cfg.workspace = true
brane-prx.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

policy-reasoner.workspace = true

[lints]
workspace = true
