[package]
name = "brane-prx"
version = { workspace = true }
edition = "2021"
authors = [ "Lut99" ]
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.13", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.11.5"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
log = "0.4.22"
never-say-never = "6.6.666"
reqwest = { version = "0.12.5", features = ["json"] }
rustls = "0.23.11"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
socksx = { git = "https://github.com/epi-project/socksx", tag = "v2.0.0" }
tokio = { version = "1.41.1", default-features = false, features = ["macros", "rt", "signal"] }
tokio-rustls = "0.26.0"
tonic = "0.12.3"
url = "2.5.4"
warp = "0.3.0"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
